--- a/index.html
+++ b/index.html
@@ -44,8 +44,65 @@
   </head>
   <body class="font-manrope">
     <header>
+      <nav class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <div class="navbar py-2 lg:py-7 px-0">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="pl-0 mr-4 lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Pages</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <a class="text-2xl lg:text-4xl text-our-black font-extrabold"
+              >Hockey<span class="text-our-primary">&CloseCurlyQuote;</span>s</a
+            >
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 text-base text-[#424247]">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end space-x-6">
+            <div class="hidden md:block">
+              <i class="fa-solid fa-magnifying-glass text-[#424247]"></i>
+            </div>
+            <a
+              class="bg-our-primary border border-our-primary py-3 px-4 lg:py-4 lg:px-6 lg:text-xl font-bold cursor-pointer text-white transition-all duration-300 hover:text-our-primary rounded-xl hover:bg-white"
+              >Get Ticket</a
+            >
+          </div>
+        </div>
+      </nav>
       <!-- banner section start -->
-      <div class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%] mt-14 relative">
+      <div
+        class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%] mt-2 lg:mt-5 relative"
+      >
         <div class="carousel w-full rounded-xl">
           <!-- Slide-1 -->
           <div id="slide1" class="carousel-item relative w-full">
@@ -371,19 +428,17 @@
 
         <!-- Product Gallery Start -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <!-- Each Product -->
+          <!-- Product 1-->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
                 <img class="w-full mx-auto" src="Images/5.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -428,19 +483,18 @@
               </div>
             </div>
           </div>
-          <!-- Each Product -->
+
+          <!-- Product 2 -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
-                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+                <img class="w-full mx-auto" src="Images/6.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -485,19 +539,18 @@
               </div>
             </div>
           </div>
-          <!-- Each Product -->
+
+          <!-- Product 3 -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
-                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+                <img class="w-full mx-auto" src="Images/7.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -542,19 +595,18 @@
               </div>
             </div>
           </div>
-          <!-- Each Product -->
+
+          <!-- Product 4 -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
-                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+                <img class="w-full mx-auto" src="Images/8.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -599,19 +651,18 @@
               </div>
             </div>
           </div>
-          <!-- Each Product -->
+
+          <!-- Product 5 -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
-                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+                <img class="w-full mx-auto" src="Images/9.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -656,19 +707,18 @@
               </div>
             </div>
           </div>
-          <!-- Each Product -->
+
+          <!-- Product 6 -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
-            <div
-              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
-            >
+            <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
-                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+                class="w-full lg:w-auto flex justify-center items-center col-span-12 lg:col-span-4"
               >
-                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+                <img class="w-full mx-auto" src="Images/10.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2 flex-1">
+              <div class="space-y-2 col-span-12 lg:col-span-8">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
